<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/back"
        app:title="@string/settings_header"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginBottom="24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/darkTheme"
                android:textSize="@dimen/settings_item_size"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:checked="false"
                app:showText="false"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/shareApp"
                android:textSize="@dimen/settings_item_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/share"
                android:layout_gravity="end"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/support"
                android:textSize="@dimen/settings_item_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/support"
                android:layout_gravity="end"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/user_agreement"
                android:textSize="@dimen/settings_item_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/forward_arrow"
                android:layout_gravity="end"
                />

        </FrameLayout>


    </LinearLayout>



</LinearLayout>
